# deepaugment

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  requirements_.txt  setup.py  test_environment.py  test_smoke.py  top10_policy.csv
DOTA_devkit/: DOTA.py  demo.ipynb.REMOVED.git-id
deepaugment/: augmenter.py  bayesianopt.py  build_features.py  childcnn.py  controller.py  deepaugment.py  image_generator.py  notebook.py  objective.py  run.py  run_full_model.py  run_grownup_model.py  test_image_generator.ipynb  wide_res_net.py
deepaugment/examples/: cifar10_25_policies.py  cifar10_random_aug_w_full_model.py  run_full_model_on_pawprint_images.py  run_on_pawprint_images.py
deepaugment/lib/: cutout.py  decorators.py  helpers.py  pandas_utilities.py  visualize.py
deepaugmenter/: augmenter.py  bayesianopt.py  build_features.py  childcnn.py  notebook.py  run_grownup_model.py  test_image_generator.ipynb  wide_residual_networks.py
deepaugmenter/lib/: visualize.py
docs/: .gitignore  Makefile  RTD_SETUP.md  build_features.rst  childcnn.rst  conf.py  controller.rst  deepaugment.build_features.rst  deepaugment.deepaugment.rst  deepaugment.rst  index.rst  lib.cutout.rst  lib.decorators.rst  lib.pandas_utilities.rst  lib.visualize.rst  make.bat  objective.rst
docs/about/: citation.rst  how-it-works.rst
docs/api/: index.rst
docs/examples/: cifar10.rst  custom-models.rst
docs/html/: .buildinfo  augmenter.html  build_features.html  childcnn.html  controller.html  deepaugment.deepaugment.html  deepaugment.html  genindex.html  image_generator.html  index.html  lib.cutout.html  lib.decorators.html  lib.helpers.html  lib.pandas_utilities.html  lib.visualize.html  notebook.html  objective.html  objects.inv  py-modindex.html  run_full_model.html  search.html  searchindex.js  wide_res_net.html
docs/source/: conf.py  (+1 more)
examples/: basic_usage.py
experiments/: 20251029_101016_checkpoint.json  20251029_101016_final.json  20251029_101234_checkpoint.json  20251029_101234_final.json
lib/: decorators.py  pandas_utilities.py  visualize.py
notebooks/: 01-BO-explore-raw-data.ipynb  01-BO-explore-raw-data.ipynb.REMOVED.git-id  02-BO-explore-DOTA-devkit.ipynb  02-BO-preprocess-data.ipynb  05-BO-explore-experiment-results-from-2019-1-30_19-27.ipynb  06-BO-explore-experiment-results-from-2019-1-31_3-22(uncomplete).ipynb  07-BO-explore-experiment-results-from-2019-1-31_3-22_on_aws.ipynb  07-BO-explore-experiment-results-from-2019-1-31_9-7_on_aws-Copy1.ipynb
tests/: test_deepaugment.py  test_e2e.py  test_simple.py
(+142 files in other folders)
