[project]
name = "deepaugment"
version = "2.0.11"
description = "Automated data augmentation using Bayesian optimization"
authors = [{ name = "Barış Özmen", email = "hbaristr@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "fire>=0.6.0",
    "matplotlib>=3.10.7",
    "scikit-optimize>=0.10.2",
    "bump2version>=1.0.1",
    "pre-commit>=4.3.0",
]

[project.scripts]
deepaugment = "deepaugment.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/deepaugment"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ipython>=8.0.0",
]
