[project]
name = "deepaugment"
version = "2.2.0"
description = "Automated data augmentation using Bayesian optimization"
authors = [{ name = "Barış Özmen", email = "hbaristr@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.66.0",
    "fire>=0.6.0",
    "matplotlib>=3.10.7",
    "scikit-optimize>=0.10.2",
    "toolz>=1.1.0",
    "attrs>=25.4.0",
    "cattrs>=25.3.0",
]

[project.scripts]
deepaugment = "deepaugment.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/deepaugment"]

[dependency-groups]
dev = [
    # testing
    "pytest>=8.0.0",

    # development
    "ipython>=8.0.0",

    # linting and code visualization (pyreverse comes with pylint)
    "pylint>=4.0.2",

    # documentation
    "sphinx>=8.2.3",
    "furo>=2025.9.25",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-design>=0.6.1",
    "myst-parser>=4.0.1",
    "tomli>=2.3.0",
]
